--- a/admin.html
+++ b/admin.html
@@ -83,7 +83,7 @@
     } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
     import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-    // 1. CEK ROLE ADMIN (Sesuai Dashboard Utama Boss)
+    // 1. CEK ROLE ADMIN (Tetap)
     onAuthStateChanged(auth, async (user) => {
         if (user) {
             const uSnap = await getDoc(doc(db, "users", user.uid));
@@ -95,13 +95,13 @@
         } else { window.location.href = "login.html"; }
     });
 
-    // 2. STATISTIK REALTIME
+    // 2. STATISTIK REALTIME (Tetap)
     onSnapshot(collection(db, "users"), s => document.getElementById('totalUsers').innerText = s.size);
     onSnapshot(query(collection(db, "withdrawals"), where("status", "==", "pending")), s => {
         document.getElementById('totalWD').innerText = s.size;
     });
 
-    // 3. FUNGSI BUKA MENU (Paling Krusial: Preview ImgBB)
+    // 3. FUNGSI BUKA MENU (REVISI: DETAIL REKENING WD)
     window.openMenu = async (type) => {
         const content = document.getElementById('modalContent');
         const title = document.getElementById('modalTitle');
@@ -115,7 +115,6 @@
             title.innerText = "Kelola User";
             content.innerHTML = `<div style="display:flex; gap:10px"><input id="uK" placeholder="Cari Nama/Email"><button onclick="searchU()" class="btn-mini" style="background:var(--primary); flex:0.3">CARI</button></div><div id="uR" style="margin-top:20px"></div>`;
         } else {
-            // MAPPING KOLEKSI
             let col = type === 'adv-tasks' ? 'adv_queue' : 
                       type === 'deposits' ? 'deposits' : 
                       type === 'withdraws' ? 'withdrawals' : 'task_submissions';
@@ -131,7 +130,20 @@
             content.innerHTML = "";
             snap.forEach(d => {
                 const data = d.data();
-                // LOGIKA PREVIEW GAMBAR IMGBB (Field: proofImg)
+                
+                // --- REVISI: MENAMPILKAN DETAIL REKENING JIKA TYPE ADALAH WITHDRAW ---
+                let detailWD = "";
+                if(col === 'withdrawals') {
+                    detailWD = `
+                        <div style="background:rgba(255,255,255,0.05); padding:10px; border-radius:8px; margin:10px 0; border:1px solid rgba(74,141,136,0.3)">
+                            <p style="margin:0; font-size:13px; color:var(--primary)"><b>Detail Rekening User:</b></p>
+                            <p style="margin:5px 0 0; font-size:14px;">Nama: <b>${data.accountName || '-'}</b></p>
+                            <p style="margin:2px 0 0; font-size:14px;">Metode: <b>${data.method || '-'}</b></p>
+                            <p style="margin:2px 0 0; font-size:14px;">Tujuan: <b style="color:#38bdf8">${data.target || '-'}</b></p>
+                        </div>
+                    `;
+                }
+
                 let imgHTML = data.proofImg ? 
                     `<div style="margin:10px 0;">
                         <p style="font-size:11px; margin-bottom:5px; color:var(--primary)">Bukti Screenshot (Klik untuk zoom):</p>
@@ -143,9 +155,10 @@
                         <b>${data.email || data.taskTitle || "User"}</b>
                         <p style="font-size:12px; color:#94a3b8">${data.description || data.userDetail || ""}</p>
                         <p>Nominal/Reward: <b>Rp ${(data.amount || data.reward || 0).toLocaleString()}</b></p>
+                        ${detailWD} 
                         ${imgHTML}
                         <div class="btn-row">
-                            <button class="btn-mini" style="background:var(--danger)" onclick="process('${col}','${d.id}','reject')">TOLAK</button>
+                            <button class="btn-mini" style="background:var(--danger)" onclick="process('${col}','${d.id}','reject','${data.uid}',${data.amount || data.reward})">TOLAK</button>
                             <button class="btn-mini" style="background:var(--success)" onclick="process('${col}','${d.id}','acc','${data.uid}',${data.amount || data.reward})">APPROVE</button>
                         </div>
                     </div>`;
@@ -153,18 +166,16 @@
         }
     };
 
-    // 4. LOGIKA PROSES (ACC/TOLAK)
+    // 4. LOGIKA PROSES (REVISI: SALDO BALIK SAAT REJECT WD)
     window.process = async (col, id, act, uid, amt) => {
         if(!confirm("Lanjutkan tindakan?")) return;
         try {
             const docRef = doc(db, col, id);
             if(act === 'acc') {
-                // Jika Iklan Advertiser -> Pindah ke Live Tasks
                 if(col === 'adv_queue') {
                     const snap = await getDoc(docRef);
                     await addDoc(collection(db, "tasks"), { ...snap.data(), status: 'active', timestamp: serverTimestamp() });
                 }
-                // Jika Deposit atau Kerja Member -> Tambah Saldo
                 if(col === 'deposits' || col === 'task_submissions') {
                     await updateDoc(doc(db, "users", uid), { 
                         balance: increment(Number(amt)),
@@ -173,13 +184,19 @@
                 }
                 await updateDoc(docRef, { status: 'success' });
             } else { 
+                // --- REVISI: BALIKIN SALDO JIKA WITHDRAW DITOLAK ---
+                if(col === 'withdrawals') {
+                    await updateDoc(doc(db, "users", uid), { 
+                        balance: increment(Number(amt)) 
+                    });
+                }
                 await updateDoc(docRef, { status: 'rejected' }); 
             }
             alert("Berhasil diproses!"); closeMenu();
         } catch (e) { alert("Error: " + e.message); }
     };
 
-    // 5. MANAJEMEN USER (BAN, ADMIN, SALDO)
+    // 5. MANAJEMEN USER (Tetap)
     window.searchU = async () => {
         const k = document.getElementById('uK').value.toLowerCase();
         const r = document.getElementById('uR');
@@ -220,4 +237,5 @@
 </script>
 
 </body>
+
 </html>
