--- a/withdraw.html
+++ b/withdraw.html
@@ -99,13 +99,14 @@
         <a href="profile.html" class="nav-item"><i class="fa-solid fa-circle-user"></i><span>PROFIL</span></a>
     </nav>
 
-    <script type="module">
+<script type="module">
     import { db, auth } from './js/firebase-config.js';
     import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
     import { doc, getDoc, addDoc, collection, serverTimestamp, updateDoc, increment } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
     let currentBalance = 0;
 
+    // Cek Login & Ambil Saldo
     onAuthStateChanged(auth, async (user) => {
         if (user) {
             const userDoc = await getDoc(doc(db, "users", user.uid));
@@ -116,43 +117,52 @@
         } else { window.location.href = "login.html"; }
     });
 
+    // FUNGSI INI HARUS NEMPEL KE WINDOW AGAR onclick="" BISA JALAN
     window.submitWD = async () => {
-        const amount = parseInt(document.getElementById('wdAmount').value);
+        const amountInput = document.getElementById('wdAmount').value;
         const name = document.getElementById('wdName').value;
         const target = document.getElementById('wdTarget').value;
         const method = document.getElementById('wdMethod').value;
+        const amount = parseInt(amountInput);
         
-        if(!name || !target || !amount) return alert("Isi semua data!");
-        if(amount < 30000) return alert("Minimal Rp 30.000");
-        if(amount > currentBalance) return alert("Saldo tidak cukup!");
+        if(!name || !target || !amountInput) return alert("Isi semua data!");
+        if(amount < 30000) return alert("Minimal penarikan Rp 30.000");
+        if(amount > currentBalance) return alert("Saldo Anda tidak mencukupi!");
 
+        // Beri loading agar tidak diklik berkali-kali
         const btn = document.querySelector('.btn-wd');
-        btn.innerText = "PROSES..."; btn.disabled = true;
+        const originalText = btn.innerText;
+        btn.innerText = "MEMPROSES...";
+        btn.disabled = true;
 
         try {
-            // 1. Potong Saldo
-            await updateDoc(doc(db, "users", auth.currentUser.uid), { balance: increment(-amount) });
-            
-            // 2. Simpan Data (Field disamakan untuk Admin)
+            // 1. Potong Saldo User
+            await updateDoc(doc(db, "users", auth.currentUser.uid), { 
+                balance: increment(-amount) 
+            });
+
+            // 2. Simpan data WD
             await addDoc(collection(db, "withdrawals"), {
                 uid: auth.currentUser.uid,
                 email: auth.currentUser.email,
-                accountName: name,     // Nama Pemilik
-                method: method,        // DANA/GOPAY dll
-                target: target,        // Nomor Rekening/HP
+                accountName: name,
+                method: method,
+                target: target,
                 amount: amount,
                 status: "pending",
                 timestamp: serverTimestamp()
             });
 
-            alert("Berhasil! Penarikan sedang diproses.");
+            alert("Penarikan Berhasil Diajukan!");
             window.location.href = "history.html";
         } catch(e) { 
             alert("Error: " + e.message); 
-            btn.innerText = "TARIK SALDO SEKARANG"; btn.disabled = false;
+            btn.innerText = originalText;
+            btn.disabled = false;
         }
     }
-        </script>
+</script>
 </body>
 
 </html>
+
