--- a/create-task.html
+++ b/create-task.html
@@ -79,7 +79,7 @@
 
         <div class="calc-box">
             <div class="calc-row"><span>Biaya Tugas</span> <span id="baseCost">Rp 0</span></div>
-            <div class="calc-row fee-text"><span>Pajak & Fee Web</span> <span id="feeCost">Rp 0</span></div>
+            <div class="calc-row fee-text"><span>Pajak & Fee Web (45%)</span> <span id="feeCost">Rp 0</span></div>
             <div class="calc-row total-price"><span>Total Bayar</span> <span id="totalCost">Rp 0</span></div>
         </div>
 
@@ -136,7 +136,7 @@
         const reward = parseInt(rInp.value) || 0;
         const quota = parseInt(qInp.value) || 0;
         const base = reward * quota;
-        const fee = Math.ceil(base * 0.30); // PAJAK 45%
+        const fee = Math.ceil(base * 0.45); // PAJAK 45%
         const total = base + fee;
 
         document.getElementById('baseCost').innerText = "Rp " + base.toLocaleString();
@@ -160,45 +160,33 @@
     });
 
     window.createTask = async () => {
-        const totalRequired = updateCost();
+        const totalPaid = updateCost();
         const title = document.getElementById('taskTitle').value;
         const link = document.getElementById('taskLink').value;
+        const caption = document.getElementById('taskCaption').value; // Ambil Caption
         const desc = document.getElementById('taskDesc').value;
         const limitType = document.getElementById('taskLimit').value;
 
         if(!title || !link || !desc) return alert("Lengkapi data!");
-        if (currentBalance < totalRequired) return alert("Saldo Anda tidak cukup!");
+        if (currentBalance < totalPaid) return alert("Saldo tidak cukup!");
 
-        if(confirm(`Kirim ke antrean Admin? Saldo akan terpotong Rp ${totalRequired.toLocaleString()} (Sudah termasuk pajak 45%)`)) {
-            const btn = document.getElementById('btnSubmit');
-            btn.innerText = "MEMPROSES..."; btn.disabled = true;
-
+        if(confirm(`Kirim iklan? Total potong saldo: Rp ${totalPaid.toLocaleString()}`)) {
             try {
-                // Potong saldo di awal
-                await updateDoc(doc(db, "users", auth.currentUser.uid), { balance: increment(-totalRequired) });
-                
-                // Simpan ke antrean (adv_queue)
+                await updateDoc(doc(db, "users", auth.currentUser.uid), { balance: increment(-totalPaid) });
                 await addDoc(collection(db, "adv_queue"), {
-                    title, link, description: desc,
+                    title, link, caption, description: desc,
                     quota: parseInt(qInp.value),
                     reward: parseInt(rInp.value),
-                    limitType: limitType,
-                    totalPaid: totalRequired, // Simpan total bayar (untuk refund jika ditolak)
+                    limitType, totalPaid,
                     uid: auth.currentUser.uid,
                     email: auth.currentUser.email,
-                    status: "pending",
-                    timestamp: serverTimestamp()
+                    status: "pending", timestamp: serverTimestamp()
                 });
-                
-                alert("Iklan berhasil dikirim! Menunggu verifikasi admin.");
+                alert("Berhasil dikirim ke Admin!");
                 window.location.href = "dashboard.html";
-            } catch(e) { 
-                alert(e.message); 
-                btn.innerText = "KIRIM KE ADMIN"; btn.disabled = false;
-            }
+            } catch(e) { alert(e.message); }
         }
     };
 </script>
 </body>
-
 </html>
