--- a/dashboard.html
+++ b/dashboard.html
@@ -110,7 +110,7 @@
 
     <div class="section-label">
         <span>TUGAS TERBARU</span>
-        <a href="task.html" style="color:var(--primary); text-decoration:none; font-size:10px;">LIHAT SEMUA</a>
+        <a href="tastml" style="color:var(--primary); text-decoration:none; font-size:10px;">LIHAT SEMUA</a>
     </div>
     <div class="preview-list" id="taskPreview">
         <p style="text-align:center; font-size:12px; color:var(--text-dim);">Mencari tugas baru...</p>
