--- a/submit-task.html
+++ b/submit-task.html
@@ -56,7 +56,7 @@
     import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
     // API KEY ASLI BOSS SUDAH DITEMPEL
-    const API_IMGBB = "apikey";
+    const API_IMGBB = "efbd0096cb950f46929b51dba8779c30";
     const tId = new URLSearchParams(window.location.search).get('id');
     let taskData = null;
 
@@ -102,6 +102,7 @@
 </script>
 </body>
 </html>
+
 
 
 
