--- a/submit-task.html
+++ b/submit-task.html
@@ -208,7 +208,7 @@
                 throw new Error(`Cloudinary error: ${result.error?.message || "Unknown error"}`);
             }
             
-            console.log("✅ Upload Cloudinary berhasil!");
+            console.log("BERHASIL ✅ | TUNGGU ADMIN UNTUK MEMVERIFIKASI ⚠️");
             console.log("🔗 URL gambar:", result.secure_url);
             
             // STEP 3: SIMPAN KE FIRESTORE
@@ -256,6 +256,7 @@
 </script>
 </body>
 </html>
+
 
 
 
