--- a/deposit.html
+++ b/deposit.html
@@ -68,8 +68,8 @@
         <div class="bank-card">
             <span class="bank-label">TUJUAN TRANSFER</span>
             <span class="bank-name">SeaBank</span>
-            <span class="bank-acc" id="noRek">901199447347</span>
-            <span class="bank-holder">A/N Yxxxx Wxxxxx</span>
+            <span class="bank-acc" id="noRek">xxxxxxxxxx</span>
+            <span class="bank-holder">A/N kxxxx xxxxxxxx</span>
             <button onclick="copyRek()" style="display:block; margin-top:20px; background: var(--primary); border:none; color:white; padding:8px 16px; border-radius:10px; font-size:11px; font-weight:800; cursor:pointer;">
                 <i class="fa-solid fa-copy"></i> SALIN REKENING
             </button>
@@ -113,7 +113,7 @@
     <script>
     // Fungsi Copy tetap di luar module agar bisa dipanggil HTML
     function copyRek() {
-        navigator.clipboard.writeText("901199447347");
+        navigator.clipboard.writeText("08xxxxxxxxxxxx");
         alert("Nomor Rekening SeaBank disalin ke clipboard!");
     }
 </script>
@@ -168,4 +168,5 @@
     }
 </script>
 </body>
+
 </html>
